--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start-blank-dbs": "docker-compose -f dev-dbs/docker-blank.yml up"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "cross-fetch": "^3.0.5",
