--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.1.3",
     "@apollo/link-context": "^2.0.0-beta.3",
+    "apollo-server": "^2.16.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "cross-fetch": "^3.0.5",
